@@ -42,6 +42,7 @@ Version 1.13.0-dev:
      when wesnoth is running in debug mode (--debug command line flag).
  * Graphics:
    * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
+   * Fixed bug #22045: Only blit neutral surfaces.
  * Units:
    * Increased the experience requirement for the Rami from 32 to 39
    * Increased the experience requirement for the Saree from 56 to 64
